# LevSeq

./: .gitignore  Development_README.md  Dockerfile  LevSeq.yml  LevSeq_colab.yml  MANIFEST.in  README.md  concensus.py  demultiplex.py  dummy.py  entrypoint.sh  environment.yml  evseq-nano.yml  interface.py  output.py  requirements.txt  run_MinION.py  run_minion.py  setup.py  tatus  vis_aln_env.yml
.ipynb_checkpoints/: cmd-checkpoint.py  interface-checkpoint.py  run_minION_SW-checkpoint.py
archive/: IO_processor-checkpoint.py  README_docker.md  jupyter_example.py  variantcaller-checkpoint.py
docs/: .buildinfo  about.html  changelog.html  faq.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sitemap.xml
docs_src/: README.md  requirements.txt
example/: Example.ipynb  Example_seqfit.ipynb  levseq-ref.csv  ref.csv
examples/: ab1_files.ipynb  barcode_simulater.ipynb  barcode_simulator_guppy.py  barcoder_analyse.ipynb  bayes_AF_analysis.ipynb  data_analysis.ipynb  demultiplexing.ipynb  (+13 more)
source/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  SW_align  alignment_results.txt  alignments  alignments.cpp  cmake_install.cmake  io.cpp  io.hpp  seq_io.cpp  test  test_local_alignment  test_local_alignment.cpp  test_main  test_main.cpp
source/source/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  alignments.cpp  alignments.hpp  barcode_index_finder.cpp  barcodes.txt  cmake_install.cmake  demultiplex  demultiplex.cpp  test_local_alignment.cpp  test_main.cpp
(+1749 files in other folders)
